@@ -811,7 +811,7 @@ the walk to the node's children.</description>
     </argument>
   </function>
   <struct name="mxml_attr_s">
-    <description>An XML element attribute value.</description>
+    <description>Data types...</description>
     <variable name="name">
       <type>char *</type>
       <description>Attribute name</description>
@@ -823,7 +823,7 @@ the walk to the node's children.</description>
   </struct>
   <typedef name="mxml_attr_t">
     <type>struct mxml_attr_s</type>
-    <description>An XML element attribute value.</description>
+    <description>Data types...</description>
   </typedef>
   <struct name="mxml_custom_s">
     <description>An XML custom value.</description>
@@ -925,6 +925,9 @@ the walk to the node's children.</description>
     <constant name="MXML_ELEMENT">
       <description>XML element with attributes</description>
     </constant>
+    <constant name="MXML_IGNORE">
+      <description>Ignore/throw away node</description>
+    </constant>
     <constant name="MXML_INTEGER">
       <description>Integer value</description>
     </constant>
@@ -938,10 +941,6 @@ the walk to the node's children.</description>
       <description>Text fragment</description>
     </constant>
   </enumeration>
-  <typedef name="mxml_type_t">
-    <type>enum mxml_type_e</type>
-    <description>The XML node type.</description>
-  </typedef>
   <struct name="mxml_value_s">
     <description>An XML element value.</description>
     <variable name="attrs">
